--- a/app/src/main/res/menu/drawing_fragment_menu.xml
+++ b/app/src/main/res/menu/drawing_fragment_menu.xml
@@ -2,8 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/colour"
-        android:title="@string/menuitem_colour"
+        android:id="@+id/color"
+        android:title="@string/menuitem_color"
         android:icon="@drawable/ic_color_lens_white_24dp"
         app:showAsAction="ifRoom" />
 
