--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,17 @@
     <color name="colorPrimary">#84bd00</color>
     <color name="colorPrimaryDark">#006341</color>
     <color name="colorAccent">#f1b434</color>
+
+    <color name="black">#000000</color>
+    <color name="white">#ffffff</color>
+
+    <color name="transparent">#00ffffff</color>
+
+    <color name="red">#ff0000</color>
+    <color name="orange">#ff7f00</color>
+    <color name="yellow">#ffff00</color>
+    <color name="green">#00ff00</color>
+    <color name="blue">#0000ff</color>
+    <color name="indigo">#4b0082</color>
+    <color name="violet">#9400d3</color>
 </resources>
