--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,6 +3,9 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
-    <dimen name="colour_view_height">80sp</dimen>
+    <dimen name="fab_high_margin">70dp</dimen>
+    <dimen name="cc_fragment_button_height">45dp</dimen>
+    <dimen name="cc_fragment_button_width">45dp</dimen>
+    <dimen name="color_view_height">80sp</dimen>
     <dimen name="line_imageview_height">50sp</dimen>
 </resources>
